DuPont DevSB/src/objects/ccrz__E_PriceGroup__c.object
<CustomObject>
    <description>Used to determine alternative pricing for accounts outside of the standard account grouping.  Primary uses are for contracts, relative (upgrade/downgrade), segmented and contextual based pricing.</description>
    <fields>
        <fullName>ccrz__EffectiveEnd__c</fullName>
        <defaultValue>DATETIMEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>Date at which this entry is expires</description>
        <inlineHelpText>Date at which this entry is expires</inlineHelpText>
        <label>Effective End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveStart__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date and Time at which this entry is takes effect</description>
        <inlineHelpText>Date and Time at which this entry is takes effect</inlineHelpText>
        <label>Effective Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the entry is available.</description>
        <inlineHelpText>Determines if the entry is available.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__GroupName__c</fullName>
        <description>Naming for this price group.</description>
        <inlineHelpText>Naming for this price group.</inlineHelpText>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__GroupType__c</fullName>
        <description>Categorization of the price group.  This may contain values such as Contract, Upgrade, etc.</description>
        <inlineHelpText>Categorization of the price group.  This may contain values such as Contract, Upgrade, etc.</inlineHelpText>
        <label>Group Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PriceGroupID__c</fullName>
        <description>External ID field</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID field</inlineHelpText>
        <label>Price Group ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CC Price Group</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PG-{0000000000}</displayFormat>
        <label>CC Price Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Price Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>